--- a/opdracht-1/selectors.css
+++ b/opdracht-1/selectors.css
@@ -1,3 +1,16 @@
+#widht-text {width: 100%}
+
+.ul-color {color: hsl(110, 29%, 52%)}
+
+.text-size {font-size: smaller}
+
+
+
+
+
+
+
+
 /* ======================================================
    OEFENEN MET CSS SELECTORS
 ========================================================= */
